{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 45,
  "lineage": "cb2e1fac-6e41-9dca-41d8-25f84a8c10e4",
  "resources": [
    {
      "module": "module.aws_lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress_lb",
      "provider": "module.aws_lb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125332942:loadbalancer/app/wordpress-lb/c6987260248c0c64",
            "arn_suffix": "app/wordpress-lb/c6987260248c0c64",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-lb-420291646.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125332942:loadbalancer/app/wordpress-lb/c6987260248c0c64",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06aa4c2b9c2559baa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0182fcbe3b73c71da"
              },
              {
                "subnet_id": "subnet-0b30c7122235060bc"
              }
            ],
            "subnets": [
              "subnet-0182fcbe3b73c71da",
              "subnet-0b30c7122235060bc"
            ],
            "tags": {
              "Name": "wordpress-lb"
            },
            "tags_all": {
              "Name": "wordpress-lb"
            },
            "vpc_id": "vpc-0835d221e13501a2e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb_SG",
            "module.vpc.aws_subnet.subnet-project2-publica1",
            "module.vpc.aws_subnet.subnet-project2-publica2",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress_http_listener",
      "provider": "module.aws_lb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125332942:listener/app/wordpress-lb/c6987260248c0c64/ee5aed8145827785",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:211125332942:targetgroup/my-target-group/dc4219d65511de93",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125332942:listener/app/wordpress-lb/c6987260248c0c64/ee5aed8145827785",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:211125332942:loadbalancer/app/wordpress-lb/c6987260248c0c64",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_lb.aws_lb.wordpress_lb",
            "module.aws_lb.aws_lb_target_group.wordpress_target_group",
            "module.security_group.aws_security_group.alb_SG",
            "module.vpc.aws_subnet.subnet-project2-publica1",
            "module.vpc.aws_subnet.subnet-project2-publica2",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress_target_group",
      "provider": "module.aws_lb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125332942:targetgroup/my-target-group/dc4219d65511de93",
            "arn_suffix": "targetgroup/my-target-group/dc4219d65511de93",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125332942:targetgroup/my-target-group/dc4219d65511de93",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:211125332942:loadbalancer/app/wordpress-lb/c6987260248c0c64"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_SG",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:security-group/sg-06aa4c2b9c2559baa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06aa4c2b9c2559baa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_SG",
            "name_prefix": "",
            "owner_id": "211125332942",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_SG"
            },
            "tags_all": {
              "Name": "alb_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_SG",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:security-group/sg-01fa493784c4b2471",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fa493784c4b2471",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06aa4c2b9c2559baa"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06aa4c2b9c2559baa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_SG",
            "name_prefix": "",
            "owner_id": "211125332942",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_SG"
            },
            "tags_all": {
              "Name": "ec2_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.alb_SG",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_SG",
      "provider": "module.security_group.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:security-group/sg-02531bc40603b5008",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02531bc40603b5008",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_SG",
            "name_prefix": "",
            "owner_id": "211125332942",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_SG"
            },
            "tags_all": {
              "Name": "rds_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip_project2a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3b239e784b40d26",
            "arn": "arn:aws:ec2:us-east-1:211125332942:elastic-ip/eipalloc-0d3b239e784b40d26",
            "association_id": "eipassoc-025d670d36ea3bb66",
            "domain": "vpc",
            "id": "eipalloc-0d3b239e784b40d26",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0394603cd7e627083",
            "private_dns": "ip-10-0-10-183.ec2.internal",
            "private_ip": "10.0.10.183",
            "public_dns": "ec2-52-72-140-53.compute-1.amazonaws.com",
            "public_ip": "52.72.140.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip_elastico_project2a"
            },
            "tags_all": {
              "Name": "ip_elastico_project2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip_project2b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3a4277cac7748e3",
            "arn": "arn:aws:ec2:us-east-1:211125332942:elastic-ip/eipalloc-0f3a4277cac7748e3",
            "association_id": "eipassoc-0e01b72498212f398",
            "domain": "vpc",
            "id": "eipalloc-0f3a4277cac7748e3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a2154f6eec362791",
            "private_dns": "ip-10-0-11-83.ec2.internal",
            "private_ip": "10.0.11.83",
            "public_dns": "ec2-44-197-47-123.compute-1.amazonaws.com",
            "public_ip": "44.197.47.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip_elastico_project2b"
            },
            "tags_all": {
              "Name": "ip_elastico_project2b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project2-igw01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:internet-gateway/igw-00e78fed4db2661fe",
            "id": "igw-00e78fed4db2661fe",
            "owner_id": "211125332942",
            "tags": {
              "Name": "project2-igw01"
            },
            "tags_all": {
              "Name": "project2-igw01"
            },
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_project2a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3b239e784b40d26",
            "association_id": "eipassoc-025d670d36ea3bb66",
            "connectivity_type": "public",
            "id": "nat-0ac4c373adcb0174b",
            "network_interface_id": "eni-0394603cd7e627083",
            "private_ip": "10.0.10.183",
            "public_ip": "52.72.140.53",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0182fcbe3b73c71da",
            "tags": {
              "Name": "nat_gtw_project2a"
            },
            "tags_all": {
              "Name": "nat_gtw_project2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip_project2a",
            "module.vpc.aws_subnet.subnet-project2-publica1",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_project2b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3a4277cac7748e3",
            "association_id": "eipassoc-0e01b72498212f398",
            "connectivity_type": "public",
            "id": "nat-02f562dba1a8094ff",
            "network_interface_id": "eni-0a2154f6eec362791",
            "private_ip": "10.0.11.83",
            "public_ip": "44.197.47.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b30c7122235060bc",
            "tags": {
              "Name": "nat_gtw_project2b"
            },
            "tags_all": {
              "Name": "nat_gtw_project2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip_project2b",
            "module.vpc.aws_subnet.subnet-project2-publica2",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_padrao_privada_subnet_a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01e2fe5d081d06f8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ac4c373adcb0174b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01e2fe5d081d06f8d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip_project2a",
            "module.vpc.aws_nat_gateway.nat_gateway_project2a",
            "module.vpc.aws_route_table.rtb_private_project2a",
            "module.vpc.aws_subnet.subnet-project2-publica1",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_padrao_privada_subnet_b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05eb0a886a0de583d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02f562dba1a8094ff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05eb0a886a0de583d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip_project2b",
            "module.vpc.aws_nat_gateway.nat_gateway_project2b",
            "module.vpc.aws_route_table.rtb_private_project2b",
            "module.vpc.aws_subnet.subnet-project2-publica2",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_padrao_publica_subnet_a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00e78fed4db2661fe",
            "id": "r-rtb-0aeb17f2d7eb0eab11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aeb17f2d7eb0eab1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.project2-igw01",
            "module.vpc.aws_route_table.rtb_publica_project2a",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota_padrao_publica_subnet_b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00e78fed4db2661fe",
            "id": "r-rtb-008b87cff51282eb01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008b87cff51282eb0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.project2-igw01",
            "module.vpc.aws_route_table.rtb_publica_project2b",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private_project2a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:route-table/rtb-01e2fe5d081d06f8d",
            "id": "rtb-01e2fe5d081d06f8d",
            "owner_id": "211125332942",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ac4c373adcb0174b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb_private_project2a"
            },
            "tags_all": {
              "Name": "rtb_private_project2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private_project2b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:route-table/rtb-05eb0a886a0de583d",
            "id": "rtb-05eb0a886a0de583d",
            "owner_id": "211125332942",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02f562dba1a8094ff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb_private_project2b"
            },
            "tags_all": {
              "Name": "rtb_private_project2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_publica_project2a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:route-table/rtb-0aeb17f2d7eb0eab1",
            "id": "rtb-0aeb17f2d7eb0eab1",
            "owner_id": "211125332942",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e78fed4db2661fe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb_publica_project2a"
            },
            "tags_all": {
              "Name": "rtb_publica_project2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_publica_project2b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:route-table/rtb-008b87cff51282eb0",
            "id": "rtb-008b87cff51282eb0",
            "owner_id": "211125332942",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e78fed4db2661fe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb_publica_project2b"
            },
            "tags_all": {
              "Name": "rtb_publica_project2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roteamento_privado_a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e09a89e5015b5729",
            "route_table_id": "rtb-01e2fe5d081d06f8d",
            "subnet_id": "subnet-08b13d801b9a294a6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_private_project2a",
            "module.vpc.aws_subnet.subnet-project2-privada1",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roteamento_privado_b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d7a30b72c4263f3",
            "route_table_id": "rtb-05eb0a886a0de583d",
            "subnet_id": "subnet-0560b9d8c3331a6d6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_private_project2b",
            "module.vpc.aws_subnet.subnet-project2-privada2",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roteamento_publico_a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceb388aa8c937f15",
            "route_table_id": "rtb-0aeb17f2d7eb0eab1",
            "subnet_id": "subnet-0182fcbe3b73c71da"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_publica_project2a",
            "module.vpc.aws_subnet.subnet-project2-publica1",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "roteamento_publico_b",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9c37a6d680f4f2b",
            "route_table_id": "rtb-008b87cff51282eb0",
            "subnet_id": "subnet-0b30c7122235060bc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_publica_project2b",
            "module.vpc.aws_subnet.subnet-project2-publica2",
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-project2-privada1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:subnet/subnet-08b13d801b9a294a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b13d801b9a294a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125332942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-project2-privada1"
            },
            "tags_all": {
              "Name": "subnet-project2-privada1"
            },
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-project2-privada2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:subnet/subnet-0560b9d8c3331a6d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0560b9d8c3331a6d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125332942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-project2-privada2"
            },
            "tags_all": {
              "Name": "subnet-project2-privada2"
            },
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-project2-publica1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:subnet/subnet-0182fcbe3b73c71da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0182fcbe3b73c71da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125332942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-project2-publica1"
            },
            "tags_all": {
              "Name": "subnet-project2-publica1"
            },
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-project2-publica2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:subnet/subnet-0b30c7122235060bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b30c7122235060bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125332942",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-project2-publica2"
            },
            "tags_all": {
              "Name": "subnet-project2-publica2"
            },
            "vpc_id": "vpc-0835d221e13501a2e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project2_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project2_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125332942:vpc/vpc-0835d221e13501a2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06214f215ef766888",
            "default_route_table_id": "rtb-0210fc578f61f62c1",
            "default_security_group_id": "sg-0884b60264fb2cfbc",
            "dhcp_options_id": "dopt-0d96a6318b3ce72cf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0835d221e13501a2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0210fc578f61f62c1",
            "owner_id": "211125332942",
            "tags": {
              "Name": "project2-vpc"
            },
            "tags_all": {
              "Name": "project2-vpc"
            }
          }
        }
      ]
    }
  ]
}